@@ -28,6 +28,10 @@ public class GOTEntityIceSpider extends GOTEntitySpiderBase {
 	}
 
 	@Override
+	public void dropFewItems(boolean flag, int i) {
+	}
+
+	@Override
 	public void applyEntityAttributes() {
 		super.applyEntityAttributes();
 		getEntityAttribute(SharedMonsterAttributes.maxHealth).setBaseValue(1.0);
@@ -102,7 +106,6 @@ public class GOTEntityIceSpider extends GOTEntitySpiderBase {
 			wight.setCurrentItemOrArmor(3, ((GOTEntityHumanBase) entity).getEquipmentInSlot(3));
 			wight.setCurrentItemOrArmor(4, ((GOTEntityHumanBase) entity).getEquipmentInSlot(4));
 			wight.familyInfo.setMale(((GOTEntityHumanBase) entity).familyInfo.male);
-			((GOTEntityHumanBase) entity).becameWight = true;
 			worldObj.removeEntity(entity);
 			worldObj.spawnEntityInWorld(wight);
 		}
